VQ-2213:Ability to View Risk details

--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -203,7 +203,7 @@
                         <div class="mb-3 row">
                             <label for="minmax-buttons" class="col-5 col-form-label" id="scheduleLabel">{{'gis.quotation.vehicle_make' | translate}}:</label>
                             <div class="col-7">
-                                <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" formControlName="vehicleMake">
+                                <input type="text" id="scheduleInput" class="form-control form-control-sm mb-1" formControlName="Make">
                             </div>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                         <div class="mb-3 row">
                             <label for="minmax-buttons" class="col-5 col-form-label" id="scheduleLabel">{{'gis.quotation.seating_capacity' | translate}}:</label>
                             <div class="col-7">
-                                <select class="form-select form-control-sm mb-1" id="scheduleInput" formControlName="seatingCapacity">
+                                <select class="form-select form-control-sm mb-1" id="scheduleInput" formControlName="carryCapacity">
                                     <option></option>
                                     <option></option>
                                 </select>
@@ -424,7 +424,7 @@
                         <div class="mb-3 row">
                             <label for="minmax-buttons" class="col-5 col-form-label" id="scheduleLabel">{{'gis.quotation.driver_sms_no' | translate}}:</label>
                             <div class="col-7">
-                                <input type="number" id="scheduleInput" class="form-control form-control-sm mb-1" formControlName="driverSMSNo">
+                                <input type="number" id="scheduleInput" class="form-control form-control-sm mb-1" formControlName="driverSmsNo">
                             </div>
                         </div>
                     </div>
