--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.css
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.css
@@ -1,4 +1,46 @@
-.title{
-    color:#00529B;
+.title {
+    color: #00529B;
     font-size: 16px;
+}
+
+.tab-content-details {
+    background-color: #ffffff;
+}
+
+.list-group-item {
+    border: none;
+    /* Remove borders between list items */
+    cursor: pointer;
+    /* Change cursor to pointer on hover */
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+
+}
+
+.list-group-item.selected {
+    color: rgba(0, 82, 155, 1);
+    /* Change font color when selected */
+
+}
+
+#icon {
+    background-color: #E4E7EB;
+    border-radius: 100px;
+    border: none;
+}
+
+#icon i {
+    color: #00529B;
+}
+
+.subheading {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+
 }
