--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
@@ -10,7 +10,7 @@
                       <a class="nav-link active" aria-current="page" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home">Policy Details</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile">Reinsurance</a>
+                      <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-policy-other-details">Policy other details</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link"  id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact">Risk Details</a>
@@ -22,22 +22,229 @@
                 
             </div>
         </div>
-        <div class="card">
-            <div class="card-body">
-                <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                        <button class="btn btn-primary float-end mt-4 me-4" (click)="computePremium()">Compute Premium</button>
-                           
-                        <p class="title">{{'gis.policy.policy_details' | translate}}</p>
-                           
-                    </div>
-                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                        <button type="button" class="btn btn-primary float-end mt-4 me-4">Compute Premium</button>
+        <div class="container">
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                    <button class="btn btn-primary float-end mt-4 me-4" (click)="computePremium()">Compute Premium</button>
+                       
+                    <p class="title">{{'gis.policy.policy_details' | translate}}</p>
+                       
+                </div>
+                <div class="tab-pane fade" id="pills-policy-other-details" role="tabpanel" aria-labelledby="pills-policy-other-details-tab">
+                   
+                    <div class="row">
+                        <div class="col-3">
+                            <!-- Sidebar content -->
+                            <div class="sidebar">
+                                <!-- <h5>Sidebar</h5> -->
+                                <ul class="list-group">
+                                    <li class="list-group-item" (click)="selectItem(1)" [class.selected]="selectedItem === 1">Risk details</li>
+                                    <li class="list-group-item" (click)="selectItem(2)" [class.selected]="selectedItem === 2">Client DD details</li>
+                                    <li class="list-group-item" (click)="selectItem(3)" [class.selected]="selectedItem === 3">Policy taxes</li>
+                                    <li class="list-group-item" (click)="selectItem(4)" [class.selected]="selectedItem === 4">Policy clauses</li>
+                                    <li class="list-group-item" (click)="selectItem(5)" [class.selected]="selectedItem === 5">Policy subclasses clauses</li>
+                                    <li class="list-group-item" (click)="selectItem(6)" [class.selected]="selectedItem === 6">Policy level perils</li>
+                                    <li class="list-group-item" (click)="selectItem(7)" [class.selected]="selectedItem === 7">Policy remarks</li>
+                                    <li class="list-group-item" (click)="selectItem(8)" [class.selected]="selectedItem === 8">Limits of liability</li>
+                                    <li class="list-group-item" (click)="selectItem(9)" [class.selected]="selectedItem === 9">External claims exp..</li>
+                                    <li class="list-group-item" (click)="selectItem(10)" [class.selected]="selectedItem === 10">Internal claims exp..</li>
+                                    <li class="list-group-item" (click)="selectItem(11)" [class.selected]="selectedItem === 11">Service providers</li>
+                                    <li class="list-group-item" (click)="selectItem(12)" [class.selected]="selectedItem === 12">Reasons for pending</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-9  tab-content-details">
+                            <!-- Content based on sidebar selection -->
+                            <ng-container *ngIf="selectedItem === 1">
+                                <div class="row mt-4">
+                                    <div class="col-sm-3">
+                                        <p class="subheading">Insureds</p>
+                
+                                    </div>
+                                    <div class="col-sm-9 d-flex justify-content-end">
+                                        <div class="row  mb-2">
+                
+                                            <!-- <div class="col-sm-3"></div> -->
+                                            <div class="col-sm-3 ">
+                                                <button type="button" id="icon" class="btn btn-success" data-bs-toggle="modal"
+                                                    data-bs-target="#addSection" title="add">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                </button>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal"
+                                                    data-bs-target="#editThirdDetails" title="Edit">
+                                                    <i class="fa-solid fa-pencil"></i>
+                                                </button>
+                                            </div>
+                                            <div class="col-sm-3">
+                                                <button type="button" id="icon" class="btn btn-danger" data-bs-toggle="modal"
+                                                    data-bs-target="#deleteCoinsurance" title="Delete">
+                                                    <i class="fa-solid fa-trash-can"></i>
+                                                </button>
+                                            </div>
+                
+                
+                                        </div>
+                
+                                    </div>
+                                </div>
+                                <p-table   [value]="allClients" dataKey="code" editMode="row" [tableStyle]="{'min-width': '50rem'}"
+                               
+                                styleClass="p-datatable-sm"
+                                responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
+                                <ng-template pTemplate="header">
+                                    <tr>
+                                        <th style="width:12%">Name</th>
+                                        <th >Address</th>
+                                        <th >Town</th>
+                                        <th >Pin</th>
+                                        <th>Description</th>
+                                        <th >Passport no.</th>
+                                        <th >Business</th>
+                                        <th >Other interested parties</th>
+                                        <th >ID no.</th>
 
+                                      
+                                    </tr>
+                                </ng-template>
+                                <ng-template pTemplate="body" let-allClients let-editing="editing" let-ri="rowIndex">
+                                    <tr [pEditableRow]="allClients">
+
+                                        <td>{{allClients.firstName + ' ' + allClients.lastName}}</td>
+                                        <td>{{allClients.physicalAddress}}</td>
+                                        <td>{{allClients.town}}</td>
+                                        <td>{{allClients.pinNumber}}</td>
+                                        <td>{{allClients.physicalAddress}}</td>
+                                        <td>{{allClients.passportNumber}}</td>
+                                        <td></td>
+                                        <!-- <td [pEditableRow]="allClients.limitAmount" pEditableColumnField="limitAmount">
+                                            <input [(ngModel)]="allClients.limitAmount" class="cellEditorInput" type="text">
+            
+                                          
+                                        </td> -->
+                                        <td>
+                                            <!-- <p-cellEditor>
+                                                <ng-template pTemplate="input">
+                                                    <input pInputText type="text" [(ngModel)]="allClients.rate"
+                                                        class="form-control form-control-sm" [ngModelOptions]="{standalone: true}">
+                                                </ng-template>
+                                                <ng-template pTemplate="output">
+                                                    {{allClients.physicalAddress}}
+                                                </ng-template>
+                                              
+                                            </p-cellEditor> -->
+                                        </td>
+                                        
+                                        <td>{{allClients.idNumber}}</td>
+            
+            
+            
+                                        <!-- <td>
+                                            <div class="flex align-items-center justify-content-center gap-2">
+                                                <button 
+                                                    *ngIf="!editing" 
+                                                    pButton 
+                                                    pRipple 
+                                                    type="button" 
+                                                    pInitEditableRow 
+                                                    icon="pi pi-pencil" 
+                                                     
+                                                    class="p-button-rounded p-button-text">
+                                                </button>
+                                                <button 
+                                                    *ngIf="editing" 
+                                                    pButton 
+                                                    pRipple 
+                                                    type="button" 
+                                                    pSaveEditableRow 
+                                                    icon="pi pi-check" 
+                                                    
+                                                    class="p-button-rounded p-button-text p-button-success mr-2">
+                                                </button>
+                                                <button 
+                                                    *ngIf="editing" 
+                                                    pButton pRipple 
+                                                    type="button" 
+                                                    pCancelEditableRow 
+                                                    icon="pi pi-times" 
+                                                     
+                                                    class="p-button-rounded p-button-text p-button-danger">
+                                                </button>
+                                            </div>
+                                            <div class="flex align-items-center justify-content-center gap-2">
+                                                <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                                    icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+                                                <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                                    icon="pi pi-check"
+                                                    class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                                                <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                                    icon="pi pi-times"
+                                                    class="p-button-rounded p-button-text p-button-danger"></button>
+                                            </div>
+                                        </td> -->
+                                    </tr>
+            
+            
+                                </ng-template>
+                            </p-table>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 2">
+                                <h5>Client DD details</h5>
+                                <p>Details about Client DD...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 3">
+                                <h5>Policy taxes</h5>
+                                <p>Details about Policy taxes...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 4">
+                                <h5>Policy clauses</h5>
+                                <p>Details about Policy clauses...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 5">
+                                <h5>Policy subclasses clauses</h5>
+                                <p>Details about Policy subclasses clauses...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 6">
+                                <h5>Policy level perils</h5>
+                                <p>Details about Policy level perils...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 7">
+                                <h5>Policy remarks</h5>
+                                <p>Details about Policy remarks...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 8">
+                                <h5>Limits of liability</h5>
+                                <p>Details about Limits of liability...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 9">
+                                <h5>External claims exp..</h5>
+                                <p>Details about External claims exp...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 10">
+                                <h5>Internal claims exp..</h5>
+                                <p>Details about Internal claims exp...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 11">
+                                <h5>Service providers</h5>
+                                <p>Details about Service providers...</p>
+                            </ng-container>
+                            <ng-container *ngIf="selectedItem === 12">
+                                <h5>Reasons for pending</h5>
+                                <p>Details about Reasons for pending...</p>
+                            </ng-container>
+                        </div>
                     </div>
-                    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
-                  </div>
-            </div>
+                    <!-- <button type="button" class="btn btn-primary float-end mt-4 me-4">Compute Premium</button> -->
+
+                </div>
+                <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
+              </div>
         </div>
+        <!-- <div class="card">
+            <div class="card-body">
+              
+            </div>
+        </div> -->
     </div>
 </div>
