--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
@@ -384,6 +384,70 @@
                             </div>
                             <div class="col-4"></div>
                         </div>
+                        <p class="title">Client Information</p>
+                        <br>
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p class="label">Client Name</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <p class="detail"></p>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p class="label">Other Interested Parties</p>  
+                                    </div>
+                                    <div class="col-6">
+                                        <p class="detail"> </p>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p class="label">Policy joint client</p>
+                                       
+                                    </div>
+                                    <div class="col-6">
+                                        <p class="detail"></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p class="label">Joint Client Name</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <p class="detail"></p>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p class="label">Joint account</p>  
+                                    </div>
+                                    <div class="col-6">
+                                        <p class="detail"> </p>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
 
