--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
@@ -261,7 +261,18 @@
 <div class="row mt-5 mb-2">
   <div class="col-12 mt-2 mb-2">
     <label class="text-primary fw-medium">Etims</label>
-    <label class="text-dark fw-medium offset-lg-4">Debit note: <span>1554555</span> </label>
+
+  </div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault" (click)="postToEtims()" style="cursor:pointer">
+        Post to Etims
+      </label>
+      <label class="text-dark fw-medium offset-lg-4"
+      *ngIf="this.policyDetails?.premium > 0 && this.eTimsArrData.length > 0"
+      >Debit note: <span class="fw-normal">{{eTimsArrData[0]?.etim_trader_invoice_number}}</span> </label>
+    </div>
   </div>
 
   <p-table
@@ -270,8 +281,8 @@
     [resizableColumns]="true"
     [showCurrentPageReport]="true"
     [rows]="pageSize || 5"
-    [totalRecords]="eTimsData?.length"
-    [value]="eTimsData"
+    [totalRecords]="eTimsArrData?.length"
+    [value]="eTimsArrData"
     [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
     responsiveLayout="stack"
     [scrollable]="true"
@@ -290,26 +301,46 @@
         <th>Taxable amount B</th>
         <th>Taxable amount C</th>
         <th>Taxable amount D</th>
-        <th>Taxable amount E</th>
+        <th>Tax amount A</th>
+        <th>Tax amount B</th>
+        <th>Tax amount C</th>
+        <th>Tax amount D</th>
+        <th>Tax rate A</th>
+        <th>Tax rate B</th>
+        <th>Tax rate C</th>
+        <th>Tax rate D</th>
+        <th>Error message</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-eTims>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+        <td>{{eTims?.etim_trader_invoice_number}}</td>
+        <td>{{eTims?.etim_unit_price}}</td>
+        <td>{{eTims?.etim_date_captured}}</td>
+        <td>{{eTims?.etim_time}}</td>
+        <td>{{eTims?.etims_queue_status}}</td>
+        <td>{{eTims?.etim_taxable_amount_a}}</td>
+        <td>{{eTims?.etim_taxable_amount_b}}</td>
+        <td>{{eTims?.etim_taxable_amount_c}}</td>
+        <td>{{eTims?.etim_taxable_amount_d}}</td>
+        <td>{{eTims?.etim_tax_amount_a}}</td>
+        <td>{{eTims?.etim_tax_amount_b}}</td>
+        <td>{{eTims?.etim_tax_amount_c}}</td>
+        <td>{{eTims?.etim_tax_amount_d}}</td>
+        <td>{{eTims?.etim_tax_rate_a}}</td>
+        <td>{{eTims?.etim_tax_rate_b}}</td>
+        <td>{{eTims?.etim_tax_rate_c}}</td>
+        <td>{{eTims?.etim_tax_rate_d}}</td>
+        <td>
+          <span title="{{eTims?.etim_error}}">
+            {{eTims?.etim_error?.substring(0,20) | titlecase }}
+          </span>
+        </td>
       </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
       <tr>
-        <td colspan="9">No Etims Detail(s) Found.</td>
+        <td colspan="18">No Etims Detail(s) Found.</td>
       </tr>
     </ng-template>
   </p-table>
